# notedly

./: LICENSE  README.md
deployments/: api.yaml  services.yaml
modules/web/server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  building.md
modules/web/server/helm/: Chart.yaml  values.yaml
modules/web/server/helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
modules/web/server/helm/templates/tests/: test-connection.yaml
modules/web/server/migrations/2019-12-02-213647_create_notes/: down.sql  up.sql
modules/web/server/scripts/: deploy_all.sh  deploy_docker.sh  deploy_gcloud.sh
modules/web/server/src/: lib.rs  main.rs  model.rs  models.rs  note.rs  schema.rs  user.rs
modules/web/server/src/api/: boards.rs  mod.rs  notes.rs  oauth.rs  server.rs  users.rs  wrapper.rs
modules/web/server/src/modes/: geometric.rs  mod.rs
modules/web/ui/: README.md  nuxt.config.js  package.json
modules/web/ui/layouts/: default.vue
modules/web/ui/pages/: index.vue
