[package]
name = "server"
version = "0.1.0"
authors = ["Dowland Aiello <dowlandaiello@gmail.com>"]
edition = "2018"

[dependencies]
tokio = "0.2.16"
reqwest = { version = "0.10.4", features = ["json"] }
snafu = "0.6.3"
sha3 = "0.8.2"
serde = { version = "1.0.106", features = ["derive"] }
clap = { git = "https://github.com/clap-rs/clap/" }
hex = "0.4.2"
log = "0.4.8"
env_logger = "0.7.1"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "numeric", "serde_json"]  }
actix-web = { version = "2.0.0", features = ["default", "openssl"] }
oauth2 = "3.0.0-alpha.9"
dotenv = "0.15.0"
r2d2 = "0.8.8"
r2d2_postgres = "0.16.0"
rand = "0.7.3"
serde_json = "1.0.51"
actix-session = "0.3.0"
actix-rt = "1.0.0"
actix-cors = "0.2.0"
human-panic = "1.0.3"
